src/objects/ReportLogo__c.object
<CustomObject>
    <description>Logo image file for Statement sheet, Estimate sheet and Invoice sheet</description>
    <fields>
        <fullName>ReportLogo__c</fullName>
        <label>レポートロゴ</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ShopInfoRef__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>店舗情報</label>
        <referenceTo>ShopInformation__c</referenceTo>
        <relationshipName>ShopInfoRef</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StampDutyImage__c</fullName>
        <inlineHelpText>印紙税画像格納、画像サイズ70px*70pxを設定してください

該当項目を設定する、請求書/会計書(施設コード33/34)の領収書に該当画像を出力する</inlineHelpText>
        <label>印紙税画像</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>StampImage__c</fullName>
        <label>ハンコ画像</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>レポートロゴ</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ShopInfoRef__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>請求書ロゴ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>